test/typecheck/errors/bad-views10.boa
view sv8 {
	o: output sum[string][string] of int;
	s := 2;

	o["a"]["b"] << 0;
}

v : table [count:string][year: string] of happy: int = sv8/o;

st := v["abc"][3];